# fastapi-template

./: CHANGELOG.md  Makefile  main.py  pyproject.toml
core/: __init__.py
